syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.e8yes.service";
option java_outer_classname = "EtUserProto";

message EtUser  {
    enum UserStatus {
        ACTIVE = 0;
        INACTIVE = 1;
    }

    uint64 id = 1;
    string user_name = 2;
    string alias = 3;
    string passcode = 4;
    uint64 created_at_sec = 5;
    uint64 avatar_path = 6;
    UserStatus status = 7;
    int32 group_id = 8;
}
